# dlfs-rust

./: .gitignore  Cargo.toml  README.md
benches/: benchmark.rs
src/: lib.rs  main.rs  utils.rs
src/utils/: activation_function.rs  loss_function.rs  mnist.rs
