[package]
name = "dlfs-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
nalgebra = "0.31.0"
num = "0.4.0"
anyhow = "1.0.58"
flate2 = "1.0.24"
reqwest = "0.11.11"
futures = "0.3.21"
tokio = { version = "1.20.0", features = ["full"] }

[dev-dependencies]
criterion = "0.3.6"

[[bench]]
name = "benchmark"
harness = false
